src/objects/Field_Event__c/Field_Event__c.object-meta.xml
<CustomObject>
    <label>Field Event</label>
    <nameField>
        <displayFormat>FE-{0}</displayFormat>
        <label>Field Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>