src/objects/Field_Event__c/fields/Accident_Incident__c.field-meta.xml
<CustomField>
    <fullName>Accident_Incident__c</fullName>
    <label>Accident/Incident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>