src/objects/Field_Event__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account Name should not contain Various</errorMessage>
        <filterItems>
            <field>Account.Report_Account_Name_upper__c</field>
            <operation>notContain</operation>
            <value>VARIOUS</value>
        </filterItems>
        <infoMessage>Account Name should not contain &quot;Various&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Field Events</relationshipLabel>
    <relationshipName>Field_Events</relationshipName>
    <type>Lookup</type>
</CustomField>