src/objects/Field_Event__c/fields/Aircraft_Tail_Number__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Tail_Number__c</fullName>
    <label>Aircraft Tail Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>