src/objects/Field_Event__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Number</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Field Events</relationshipLabel>
    <relationshipName>Field_Events</relationshipName>
    <type>Lookup</type>
</CustomField>