src/objects/Field_Event__c/fields/Catalog_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Product_Group__c</fullName>
    <inlineHelpText>This field is dependent upon &quot;Product Type&quot;.</inlineHelpText>
    <label>Catalog Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Air &amp; Thermal Management Systems(ME)</fullName>
            </value>
            <value>
                <fullName>Aircraft Lighting(LI)</fullName>
            </value>
            <value>
                <fullName>Auxilary Power Units(ME)</fullName>
            </value>
            <value>
                <fullName>Cabin(SV)</fullName>
            </value>
            <value>
                <fullName>Cabin Entertainment(EL)</fullName>
            </value>
            <value>
                <fullName>Communication, Navigation, Surveillance (BK)</fullName>
            </value>
            <value>
                <fullName>Communication, Navigation, Surveillance (EL)</fullName>
            </value>
            <value>
                <fullName>Condition Based Monitoring System-CBMS(SV)</fullName>
            </value>
            <value>
                <fullName>Database, Software, Information Services(SV)</fullName>
            </value>
            <value>
                <fullName>Displays(BK)</fullName>
            </value>
            <value>
                <fullName>Displays(EL)</fullName>
            </value>
            <value>
                <fullName>Electric Power System(ME)</fullName>
            </value>
            <value>
                <fullName>Engine Accessories(ME)</fullName>
            </value>
            <value>
                <fullName>Engine Controls(ME)</fullName>
            </value>
            <value>
                <fullName>Engines(ME)</fullName>
            </value>
            <value>
                <fullName>Flight Controls(EL)</fullName>
            </value>
            <value>
                <fullName>Flight Management Systems(BK)</fullName>
            </value>
            <value>
                <fullName>Flight Management Systems(EL)</fullName>
            </value>
            <value>
                <fullName>Global Data Center(SV)</fullName>
            </value>
            <value>
                <fullName>Ground Support Equipment(ME)</fullName>
            </value>
            <value>
                <fullName>Guidance and Navigation(EL)</fullName>
            </value>
            <value>
                <fullName>Information &amp; Maintenance Management(EL)</fullName>
            </value>
            <value>
                <fullName>Integrated Flight Decks(EL)</fullName>
            </value>
            <value>
                <fullName>Integrated Systems Data Processing(EL)</fullName>
            </value>
            <value>
                <fullName>Microelectronics(EL)</fullName>
            </value>
            <value>
                <fullName>Navigation Systems &amp; Sensors (BK)</fullName>
            </value>
            <value>
                <fullName>Navigation Systems &amp; Sensors (EL)</fullName>
            </value>
            <value>
                <fullName>Safety Systems (BK)</fullName>
            </value>
            <value>
                <fullName>Safety Systems (EL)</fullName>
            </value>
            <value>
                <fullName>Sensors(EL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>