src/objects/Field_Event__c/fields/Component_Installed_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Component_Installed_Part_Number__c</fullName>
    <label>Component Installed Part Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>