src/objects/Field_Event__c/fields/Component_Reason_for_Removal__c.field-meta.xml
<CustomField>
    <fullName>Component_Reason_for_Removal__c</fullName>
    <label>Component Reason for Removal</label>
    <type>TextArea</type>
</CustomField>