src/objects/Field_Event__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Field Events</relationshipLabel>
    <relationshipName>Field_Events</relationshipName>
    <type>Lookup</type>
</CustomField>