src/objects/Field_Event__c/fields/Created_in_salesforce1__c.field-meta.xml
<CustomField>
    <fullName>Created_in_salesforce1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created in salesforce1</label>
    <type>Checkbox</type>
</CustomField>