src/objects/Field_Event__c/fields/Description_from_Case__c.field-meta.xml
<CustomField>
    <fullName>Description_from_Case__c</fullName>
    <label>Description from Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>