src/objects/Field_Event__c/fields/Engine_APU_Replaced_S_N__c.field-meta.xml
<CustomField>
    <fullName>Engine_APU_Replaced_S_N__c</fullName>
    <label>Engine/APU Replaced S/N</label>
    <length>50</length>
    <type>Text</type>
</CustomField>