src/objects/Field_Event__c/fields/Engine_Position__c.field-meta.xml
<CustomField>
    <fullName>Engine_Position__c</fullName>
    <label>Engine Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>