src/objects/Field_Event__c/fields/Engine_Removal__c.field-meta.xml
<CustomField>
    <fullName>Engine_Removal__c</fullName>
    <label>Engine Removal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>