src/objects/Field_Event__c/fields/Event_Airport_text__c.field-meta.xml
<CustomField>
    <fullName>Event_Airport_text__c</fullName>
    <label>Event Airport</label>
    <length>100</length>
    <type>Text</type>
</CustomField>