src/objects/Field_Event__c/fields/Field_Event_Report__c.field-meta.xml
<CustomField>
    <fullName>Field_Event_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Event Report</label>
    <type>Checkbox</type>
</CustomField>