src/objects/Field_Event__c/fields/Field_event_Report_count__c.field-meta.xml
<CustomField>
    <fullName>Field_event_Report_count__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Field event Report count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>