src/objects/Field_Event__c/fields/IFSD_ETOPS__c.field-meta.xml
<CustomField>
    <fullName>IFSD_ETOPS__c</fullName>
    <label>IFSD/ETOPS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>