src/objects/Field_Event__c/fields/Loaner_Engine_APU_SN_or_N_A__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Engine_APU_SN_or_N_A__c</fullName>
    <label>Loaner Engine/APU S/N or N/A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>