src/objects/Field_Event__c/fields/Maintenance_Action__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Action__c</fullName>
    <label>Maintenance Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A/C Delivery</fullName>
            </value>
            <value>
                <fullName>ACCEPTANCE INSPECTION</fullName>
            </value>
            <value>
                <fullName>ACCIDENT/INCIDENT INSPECTION</fullName>
            </value>
            <value>
                <fullName>ADJUSTED OR CLEANED</fullName>
            </value>
            <value>
                <fullName>BIRD STRIKE INSPECTION</fullName>
            </value>
            <value>
                <fullName>C.A.M.</fullName>
            </value>
            <value>
                <fullName>CALIBRATED</fullName>
            </value>
            <value>
                <fullName>CONVENIENCE FOR OPERATOR</fullName>
            </value>
            <value>
                <fullName>CORE ZONE ENTRY - NO SIGNOFF</fullName>
            </value>
            <value>
                <fullName>CORE ZONE INSPECTION (CZI)</fullName>
            </value>
            <value>
                <fullName>ESTIMATE ONLY</fullName>
            </value>
            <value>
                <fullName>GEARBOX INSPECTION</fullName>
            </value>
            <value>
                <fullName>HOT SECTION INSPECTION (HIS)</fullName>
            </value>
            <value>
                <fullName>INSPECTION/CHECK (N.O.C)</fullName>
            </value>
            <value>
                <fullName>INTERIM PERIODIC MOD INSPECTION</fullName>
            </value>
            <value>
                <fullName>LIGHTNING STRIKE INSPECTION</fullName>
            </value>
            <value>
                <fullName>MAJOR PERIODIC INSPECTION(MPI)</fullName>
            </value>
            <value>
                <fullName>MAJOR PERIODIC MODULE INSPECTION MONITOR, MPI-COMBUSTOR MODULE(-14 ONLY)</fullName>
            </value>
            <value>
                <fullName>MPI-COMPRESSOR MOD(-14 ONLY)</fullName>
            </value>
            <value>
                <fullName>MPI-DIAPHRAGM MODULE(-14 ONLY)</fullName>
            </value>
            <value>
                <fullName>MPI-GEARBOX MODULE(-14 ONLY)</fullName>
            </value>
            <value>
                <fullName>MPI-NOSE CONE MODULE(-14 ONLY)</fullName>
            </value>
            <value>
                <fullName>MPI-TURBINE MODULE(-14 ONLY)</fullName>
            </value>
            <value>
                <fullName>NA/NO MAINT PERFORMED</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>NOT RECORDED(OLD ORACLE EVENTS)</fullName>
            </value>
            <value>
                <fullName>OIL CONTAMINATION INSPECTION</fullName>
            </value>
            <value>
                <fullName>OVERHAUL</fullName>
            </value>
            <value>
                <fullName>OVERSPEED INSPECTION</fullName>
            </value>
            <value>
                <fullName>OVERTEMP INSPECTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>