src/objects/Field_Event__c/fields/Maintenance_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Agreement__c</fullName>
    <label>Maintenance Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PBH</fullName>
            </value>
            <value>
                <fullName>FMP</fullName>
            </value>
            <value>
                <fullName>ISS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>