src/objects/Field_Event__c/fields/Operational_Symptom__c.field-meta.xml
<CustomField>
    <fullName>Operational_Symptom__c</fullName>
    <label>Operational Symptom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A/C Delivery</fullName>
            </value>
            <value>
                <fullName>A/C System Related</fullName>
            </value>
            <value>
                <fullName>ACCELERATION, SLOW</fullName>
            </value>
            <value>
                <fullName>ACCELERATION MALFUNCTION</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Air Leak</fullName>
            </value>
            <value>
                <fullName>AIRWORTHINESS DIRECTIVE</fullName>
            </value>
            <value>
                <fullName>ANTI-ICE INDICATION, NO</fullName>
            </value>
            <value>
                <fullName>ANTI-ICE MALFUNCTION</fullName>
            </value>
            <value>
                <fullName>APR SYSTEM MALFUNCTION</fullName>
            </value>
            <value>
                <fullName>AUTO/MANUAL MODE MALFUNCTION</fullName>
            </value>
            <value>
                <fullName>AUTO-IGNITION/RELITE, NO</fullName>
            </value>
            <value>
                <fullName>Autoshutdown</fullName>
            </value>
            <value>
                <fullName>Autoshutdown- High EGT</fullName>
            </value>
            <value>
                <fullName>Autoshutdown- High Oil Temp</fullName>
            </value>
            <value>
                <fullName>Autoshutdown- Low Oil Pressure</fullName>
            </value>
            <value>
                <fullName>Autoshutdown- On Speed</fullName>
            </value>
            <value>
                <fullName>Autoshutdown- On Start</fullName>
            </value>
            <value>
                <fullName>Autoshutdown- Overspeed</fullName>
            </value>
            <value>
                <fullName>BETA LIGHT</fullName>
            </value>
            <value>
                <fullName>BIRD STRIKE</fullName>
            </value>
            <value>
                <fullName>BORESCOPE INSPECTION, FAILED</fullName>
            </value>
            <value>
                <fullName>BORESCOPE INSPECTION FAILURE</fullName>
            </value>
            <value>
                <fullName>CHIP DETECTOR INDICATION</fullName>
            </value>
            <value>
                <fullName>CHIP LIGHT</fullName>
            </value>
            <value>
                <fullName>Circuit Breaker Trips</fullName>
            </value>
            <value>
                <fullName>COCKPIT WARNING/INDICATION</fullName>
            </value>
            <value>
                <fullName>COMPRESSOR STALL/ENGINE SURGE</fullName>
            </value>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>CONVENIENCE REMOVAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>