src/objects/Field_Event__c/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OwnerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Events</relationshipName>
    <type>Lookup</type>
</CustomField>