src/objects/Field_Event__c/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <label>Problem Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>