src/objects/Field_Event__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <label>Product Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>131-9A</fullName>
            </value>
            <value>
                <fullName>131-9B</fullName>
            </value>
            <value>
                <fullName>131-9D</fullName>
            </value>
            <value>
                <fullName>30-54</fullName>
            </value>
            <value>
                <fullName>30-92</fullName>
            </value>
            <value>
                <fullName>30-92C</fullName>
            </value>
            <value>
                <fullName>30-92CA</fullName>
            </value>
            <value>
                <fullName>331-200 B757</fullName>
            </value>
            <value>
                <fullName>331-200 B767</fullName>
            </value>
            <value>
                <fullName>331-250F/H A300-600</fullName>
            </value>
            <value>
                <fullName>331-250F/H A310</fullName>
            </value>
            <value>
                <fullName>331-350 A330</fullName>
            </value>
            <value>
                <fullName>331-350 A340</fullName>
            </value>
            <value>
                <fullName>331-500</fullName>
            </value>
            <value>
                <fullName>331-600</fullName>
            </value>
            <value>
                <fullName>36-100A</fullName>
            </value>
            <value>
                <fullName>36-100E (CL600)</fullName>
            </value>
            <value>
                <fullName>36-100E (CL601)</fullName>
            </value>
            <value>
                <fullName>36-100E (CL604)</fullName>
            </value>
            <value>
                <fullName>36-100G</fullName>
            </value>
            <value>
                <fullName>36-100H-2</fullName>
            </value>
            <value>
                <fullName>36-100H-3</fullName>
            </value>
            <value>
                <fullName>36-100M</fullName>
            </value>
            <value>
                <fullName>36-100W</fullName>
            </value>
            <value>
                <fullName>36-150A</fullName>
            </value>
            <value>
                <fullName>36-150AA</fullName>
            </value>
            <value>
                <fullName>36-150BD</fullName>
            </value>
            <value>
                <fullName>36-150BH</fullName>
            </value>
            <value>
                <fullName>36-150CL</fullName>
            </value>
            <value>
                <fullName>36-150CX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>