src/objects/Field_Event__c/fields/Product_Models__c.field-meta.xml
<CustomField>
    <fullName>Product_Models__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New Lookup Field created for Certido Ticket# 293306</description>
    <label>Product Model</label>
    <referenceTo>Product_Model__c</referenceTo>
    <relationshipLabel>Field Events</relationshipLabel>
    <relationshipName>Field_Events</relationshipName>
    <type>Lookup</type>
</CustomField>