src/objects/Field_Event__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <formula>Product_Name__r.Product_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For Field Events this is the equivalent to Primary Component Removed P/N, also known as part number</inlineHelpText>
    <label>Product Number</label>
    <type>Text</type>
</CustomField>