src/objects/Field_Event__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air &amp; Thermal Management Systems</fullName>
            </value>
            <value>
                <fullName>APU</fullName>
            </value>
            <value>
                <fullName>Avionics</fullName>
            </value>
            <value>
                <fullName>CBMS</fullName>
            </value>
            <value>
                <fullName>ECS</fullName>
            </value>
            <value>
                <fullName>Electric Power(EP)</fullName>
            </value>
            <value>
                <fullName>Engine Accessory</fullName>
            </value>
            <value>
                <fullName>Engines</fullName>
            </value>
            <value>
                <fullName>OEM Return</fullName>
            </value>
            <value>
                <fullName>Wheels and Brakes (W&amp;B)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>