src/objects/Field_Event__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>TEXT(  Account_Name__r.Strategic_Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SBU</label>
    <type>Text</type>
</CustomField>