src/objects/Field_Event__c/fields/Shutdown_Details__c.field-meta.xml
<CustomField>
    <fullName>Shutdown_Details__c</fullName>
    <label>Shutdown Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Commanded</fullName>
            </value>
            <value>
                <fullName>Uncommanded</fullName>
            </value>
            <value>
                <fullName>No Shutdown</fullName>
                <default>true</default>
                <label>No Shutdown</label>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>