src/objects/Field_Event__c/fields/Supported_Products__c.field-meta.xml
<CustomField>
    <fullName>Supported_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supported Products Lookup</description>
    <label>Supported Products</label>
    <referenceTo>Supported_Products__c</referenceTo>
    <relationshipLabel>Field Events</relationshipLabel>
    <relationshipName>Field_Events</relationshipName>
    <type>Lookup</type>
</CustomField>