src/objects/Field_Event__c/fields/TSN__c.field-meta.xml
<CustomField>
    <fullName>TSN__c</fullName>
    <label>TSN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>