src/objects/Field_Event__c/validationRules/APU_and_Engine_type_SN_is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>APU_and_Engine_type_SN_is_Mandatory</fullName>
    <active>false</active>
    <description>If it is an APU or Engines Field Event Type the FEE cannot be saved without the Engine S/N number filled in.</description>
    <errorConditionFormula>ISBLANK( Engine_APU_Reported_S_N__c )</errorConditionFormula>
    <errorMessage>Please enter the Engine/APU Reported Serial number</errorMessage>
</ValidationRule>