src/objects/Field_Event__c/validationRules/Cannot_change_Service_Request_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Service_Request_No</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Service_Request__c)</errorConditionFormula>
    <errorDisplayField>Service_Request__c</errorDisplayField>
    <errorMessage>Service Request is read only field</errorMessage>
</ValidationRule>